# STAC-API

./: .env.example  .gitignore  Dockerfile  Dockerfile copy  README.md  app.py  demo_stac_client.ipynb  docker-compose copy.yml  docker-compose.yml  pyproject.toml  requirements.txt
db/: database.py  init_stac_db.sql  models.py
stac_api/: middleware.py  settings.py
stac_app/: routes.py  views.py
stac_obj/: catalog.json
stac_obj/items/: item1.json  item2.json  item3.json  item4.json  item5.json
tests/: test_search.py
tests copy/: test_search.py
utils/: stac_utils.py
